--- a/src/main/resources/templates/trafficInsuranceRefund.html
+++ b/src/main/resources/templates/trafficInsuranceRefund.html
@@ -69,11 +69,11 @@
 					<h5>BILLING SUMMARY</h5>
 					<div class="d-flex justify-content-between">
 						<h6>Subtotal</h6>
-						<p th:text="${car.offer - kdv.carKdv + ' ₺'}"></p>
+						<p th:text="${((car.offer * 100) / ( (100 + kdv.kdvRate))) + ' ₺'}"></p>	
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>KDV</h6>
-						<p th:text="${'% ' + kdv.carKdv}"></p>
+						<p th:text="${'% ' + kdv.kdvRate}"></p>
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>Total Amount</h6>
