--- a/src/main/resources/templates/homeList.html
+++ b/src/main/resources/templates/homeList.html
@@ -65,7 +65,7 @@
 
 <body>
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
 		<div class="container">
 			<a class="navbar-brand text-black" href="/index">SBM</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
