--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -78,7 +78,7 @@
 		<div class="row mx-auto container">
 			<input type="hidden" name="customerId" th:value="${customerId}" />
 			<div class="product text-center col-lg-3 col-md-4 col-12">
-				<img class="img-fluid mb-3" src="img/traffic.jpg" alt="">
+				<img class="img-fluid mb-3" src="img/auto.jpg" alt="">
 				<h5 class="p-name">Traffic Insurance</h5>
 				<button class="buy-btn"><a th:href="@{/trafficInsuranceForm(customerId = ${customerId})}">Get
 						Offer</a></button>
