--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,30 +77,99 @@
 		</div>
 		<div class="row mx-auto container">
 			<div class="product text-center col-lg-3 col-md-4 col-12">
-				<img class="img-fluid mb-3" src="img/traffic.jpg" alt="">
+				<img class="img-fluid mb-3" src="img/auto.jpg" alt="">
 				<h5 class="p-name">Traffic Insurance</h5>
+				<br><br>
+				<ul class="product">
+					<li><i class="fa-regular fa-circle-check"></i> Most Comprehensive Offer</li>
+					<li><i class="fa-regular fa-circle-check"></i> All Authorized Services and Special Services</li>
+					<li><i class="fa-regular fa-circle-check"></i> Original Glass (Exempt)</li>
+					<li><i class="fa-regular fa-circle-check"></i> Mini-Repair: Yes</li>
+					<li><i class="fa-regular fa-circle-check"></i> Roadside Assistance: Yes</li>
+				</ul>
+				<br><br>
 				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
 			</div>
 
-			<div  class="product text-center col-lg-3 col-md-4 col-12">
+			<div class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/health.jpg" alt="">
 				<h5 class="p-name">Health Insurance</h5>
+				<br><br>
+				<ul class="product">
+					<li><i class="fa-regular fa-circle-check"></i> Health Coverage</li>
+					<li><i class="fa-regular fa-circle-check"></i> Hospitalization and Surgery</li>
+					<li><i class="fa-regular fa-circle-check"></i> Prescription Medications and Doctor Visits</li>
+					<li><i class="fa-regular fa-circle-check"></i> Dental and Vision Care (Optional)</li>
+					<li><i class="fa-regular fa-circle-check"></i> Discounts for Health Check-ups</li>
+				</ul>
+				<br><br>
 				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
-
 			</div>
 			<div class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/travel.jpg" alt="">
 				<h5 class="p-name">Travel Health Insurance</h5>
+				<br><br>
+				<ul class="product">
+					<li><i class="fa-regular fa-circle-check"></i> Global Emergency Coverage</li>
+					<li><i class="fa-regular fa-circle-check"></i> Medical Evacuation</li>
+					<li><i class="fa-regular fa-circle-check"></i> Cancellation and Interruption</li>
+					<li><i class="fa-regular fa-circle-check"></i> 24/7 Assistance</li>
+					<li><i class="fa-regular fa-circle-check"></i> Lost Baggage and Documents</li>
+				</ul>
+				<br><br>
 				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
-
 			</div>
 			<div class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/dask.jpg" alt="">
-				<h5 class="p-name">Earthquake Insurance</h5>
+				<h5 class="p-name">Home Insurance</h5>
+				<br><br>
+				<ul class="product">
+					<li><i class="fa-regular fa-circle-check"></i> Full Home and Belongings Coverage</li>
+					<li><i class="fa-regular fa-circle-check"></i> Fire, Theft, Natural Disasters</li>
+					<li><i class="fa-regular fa-circle-check"></i> Temporary Housing during Repairs</li>
+					<li><i class="fa-regular fa-circle-check"></i> Optional Valuables Coverage</li>
+					<li><i class="fa-regular fa-circle-check"></i> Safety Features Discounts</li>
+				</ul>
+				<br><br>
 				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
+			</div>
+
+		</div>
+	</section>
+
+	<section id="featured" class="my-5 py-5">
+		<div class="row mx-auto container">
+			<div class="product text-center col-lg-4 col-md-4 col-12">
+				<div style="max-width: 390px;">
+					<img class="img-fluid mb-3" style="width: 125px; height: 125px;" src="img/policy-trustworthy.jpg"
+						alt="">
+					<h5 class="p-name" style="font-weight: bold; font-size: 20px;">The Right Product</h5>
+					<p>With our renewed artificial intelligence, we find the cheapest, the right and the coverage of
+						many
+						insurance offer options. Let your decision on clear collaterals and net risks always be clear.
+					</p>
+				</div>
 
 			</div>
+			<div class="product text-center col-lg-4 col-md-4 col-12">
+				<div style="max-width: 390px;">
+					<img class="img-fluid mb-3" style="width: 125px; height: 125px;" src="img/policy-price.jpg" alt="">
+					<h5 class="p-name" style="font-weight: bold; font-size: 20px;">Good Price</h5>
+					<p>Our priority is always you. In all companies we work with, we offer the "best price guarantee"
+						considering your budget.</p>
+				</div>
+			</div>
+			<div class="product text-center col-lg-4 col-md-4 col-12">
+				<div style="max-width: 390px;">
+					<img class="img-fluid mb-3" style="width: 125px; height: 125px;" src="img/policy-with-you.jpg"
+						alt="">
+					<h5 class="p-name" style="font-weight: bold; font-size: 20px;">24/7 Service</h5>
+					<p>With our 22 years of experience and expert insurance consultants, we are there for you 24/7.
+						Moreover, you can reach us within seconds at the time of damage.</p>
+				</div>
+			</div>
 		</div>
+		<br></br>
 	</section>
 
 	<!-- Footer -->
