--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -129,6 +129,7 @@
 							<label style="margin-right: 20px;" for="productType">Enter New Kdv Rate:</label>
 							<input type="number" id="kdvRate" name="kdvRate" class="form-control"
 								placeholder="Kdv Rate*" ng-model="kdvRate" ng-required="true" min="0" max="100">
+							<p class="error" ng-show="kdvForm.kdvRate.$invalid && kdvForm.kdvRate.$touched">Fill out your kdv rate.</p>
 						</div>
 
 						<div class="modal-footer">
