--- a/src/main/resources/templates/homeInsuranceRefund.html
+++ b/src/main/resources/templates/homeInsuranceRefund.html
@@ -69,15 +69,16 @@
 					<h5>BILLING SUMMARY</h5>
 					<div class="d-flex justify-content-between">
 						<h6>Subtotal</h6>
-						<p th:text="${((insurance.offer * 100) / ( (100 + kdv.kdvRate))) + ' ₺'}"></p>
+						 <p th:text="${#numbers.formatDecimal(((insurance.offer * 100) / ( (100 + insurance.kdv))), 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
+
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>KDV</h6>
-						<p th:text="${'% ' + kdv.kdvRate}"></p>
+						<p th:text="${'% ' + insurance.kdv}"></p>
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>Total Amount</h6>
-						<p th:text="${insurance.offer + ' ₺'}"></p>
+						<p th:text="${#numbers.formatDecimal(insurance.offer, 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
 					</div>
 					<div class="d-flex justify-content-between">
 						<h6>Total Usage Time (Day)</h6>
@@ -86,10 +87,15 @@
 					<hr class="second-hr">
 					<div class="d-flex justify-content-between">
 						<h6>Total Refund</h6>
-						<p th:text="${insurance.refund + ' ₺'}"></p>
+						<p th:text="${#numbers.formatDecimal(insurance.refund, 0, 'COMMA', 2, 'POINT') + ' ₺'}"></p>
 					</div>
-										
-					<button class="ms-auto"><a th:href="@{/deleteHomeInsurance/{id}(id=${insurance.insuranceId})}">Delete</a></button>
+
+					<div class="d-flex justify-content-between">
+						<button class="ms-auto"><a
+								th:href="@{/seeHomeInsuranceDetails/{id}(id=${insurance.homeId})}">Cancel</a></button>
+						<button class="ms-2"><a
+								th:href="@{/deleteHomeInsurance/{id}(id=${insurance.insuranceId})}">Delete</a></button>
+					</div>
 				</div>
 			</div>
 		</div>
