--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -59,7 +59,9 @@ body {
     font-style: normal;
 }
 
-input{
+input[type="text"],
+input[type="date"],
+input[type="number"]{
     width: 100%;
     display: inline-block;
     font-weight: 100;
