--- a/src/main/resources/templates/healthInsuranceRefund.html
+++ b/src/main/resources/templates/healthInsuranceRefund.html
@@ -92,9 +92,9 @@
 
 					<div class="d-flex justify-content-between">
 						<button class="ms-auto"><a
-								th:href="@{/seeHomeInsuranceDetails/{id}(id=${insurance.homeId})}">Cancel</a></button>
+								th:href="@{/seeHealthInsuranceDetails/{id}(id=${insurance.healthId})}">Cancel</a></button>
 						<button class="ms-2"><a
-								th:href="@{/deleteHealthInfo/{id}(id=${insurance.healthId})}">Delete</a></button>
+								th:href="@{/deleteHealthInsurance/{id}(id=${insurance.insuranceId})}">Delete</a></button>
 					</div>
 				</div>
 			</div>
