--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -63,7 +63,7 @@
 		<button type="button" class="btn btn-info text-white mb-2"
 			style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;">
 			<a class="text-decoration-none" th:href="@{/newHomeInsuranceCalculate/{id}(id=${homeId})}">
-				<strong>Create New Home Insurance</strong>
+				<strong>Renew Home Insurance</strong>
 			</a>
 		</button>
 
