--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -62,6 +62,12 @@
 		.form-control {
 			width: 200px;
 		}
+
+		#kdvRate {
+			width: 200px;
+			padding: 8px;
+			font-weight: 400;
+		}
 	</style>
 
 </head>
@@ -90,7 +96,7 @@
 							Taxes
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" ng-click="openModal()" href="#">KDV Rate</a>
+							<li><a class="dropdown-item" ng-click="openModal()">KDV Rate</a>
 							</li>
 							<li>
 								<a class="dropdown-item" href="#">
@@ -119,23 +125,27 @@
 					<form th:action="@{/saveKdv}" method="post" name="kdvForm" novalidate>
 						<div class="d-flex justify-content-between mt-3">
 							<label style="margin-right: 20px;" for="productType">Select Product Type:</label>
-							<select class="form-control" id="productType" name="productType" ng-model="productType" required>
+							<select class="form-control" id="productType" name="productType" ng-model="productType"
+								required>
 								<option value="">Select Product Type</option>
 								<option value=1>Car</option>
 								<option value=2>Home</option>
+								<option value=3>Health</option>
 							</select>
 						</div>
 						<div class="d-flex justify-content-between mt-3">
 							<label style="margin-right: 20px;" for="productType">Enter New Kdv Rate:</label>
 							<input type="number" id="kdvRate" name="kdvRate" class="form-control"
 								placeholder="Kdv Rate*" ng-model="kdvRate" ng-required="true" min="0" max="100">
-							<p class="error" ng-show="kdvForm.kdvRate.$invalid && kdvForm.kdvRate.$touched">Fill out your kdv rate.</p>
 						</div>
+						<p class="error" ng-show="kdvForm.kdvRate.$invalid && kdvForm.kdvRate.$touched">Fill out
+							your kdv rate.</p>
 
 						<div class="modal-footer">
 							<button type="button" class="btn modal-btn" data-dismiss="modal"
 								ng-click="closeModal()">Close</button>
-							<button type="submit" class="btn modal-btn" ng-disabled="kdvForm.$invalid">Save Changes</button>
+							<button type="submit" class="btn modal-btn" ng-disabled="kdvForm.$invalid">Save
+								Changes</button>
 						</div>
 					</form>
 				</div>
@@ -148,6 +158,7 @@
 	<script th:inline="javascript">
 		var carKdv = /*[[${carKdv}]]*/ {};
 		var homeKdv = /*[[${homeKdv}]]*/ {};
+		var healthKdv = /*[[${healthKdv}]]*/ {};
 	</script>
 
 
@@ -183,8 +194,9 @@
 					<td th:text="${c.district}"></td>
 					<td><a th:href="@{/selectType(customerId=${c.customerId})}"><span
 								class="badge text-bg-primary fs-6">Select Type</span></a></td>
-					<td><button class="mx-auto"><a th:href="@{/healthInfoList/{customerId}(customerId=${c.customerId})}"><i id="icon-image" style="color: #bd0000"
-					 class="fa-solid fa-heart-circle-plus"></i></a></button></td>			
+					<td><button class="mx-auto"><a
+								th:href="@{/healthInfoList/{customerId}(customerId=${c.customerId})}"><i id="icon-image"
+									style="color: #bd0000" class="fa-solid fa-heart-circle-plus"></i></a></button></td>
 					<td><button class="mx-auto"><a th:href="@{/homeList/{customerId}(customerId=${c.customerId})}"><i
 									class="fa-solid fa-house" id="icon-image"></i></a></button></td>
 					<td><button class="mx-auto"><a th:href="@{/carList/{customerId}(customerId=${c.customerId})}"><i
