Editing information has been added to the health insurance renewal screen

--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -154,7 +154,7 @@
 		</div>
 	</div>
 
-	<!-- JavaScript değişkenlerini tanımlamak için Thymeleaf ile inline kod bloğu kullanın -->
+	<!-- JavaScript değişkenlerini tanımlamak için Thymeleaf ile inline kod bloğu kullanılmaktadır -->
 	<script th:inline="javascript">
 		var carKdv = /*[[${carKdv}]]*/ {};
 		var homeKdv = /*[[${homeKdv}]]*/ {};
