--- a/src/main/resources/templates/seeHealthInsuranceDetails.html
+++ b/src/main/resources/templates/seeHealthInsuranceDetails.html
@@ -62,7 +62,7 @@
 			deleted or expired! </div>
 		<button type="button" class="btn btn-info text-white mb-2"
 			style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;">
-			<a class="text-decoration-none" th:href="@{/newHealthInsuranceCalculate/{id}(id=${insuranceId})}">
+			<a class="text-decoration-none" th:href="@{/healthInsuranceEdit/{id}(id=${insuranceId})}"> <!--th:href="@{/newHealthInsuranceCalculate/{id}(id=${insuranceId})}"-->
 				<strong>Renew Health Insurance</strong>
 			</a>
 		</button>
